syntax = "proto3";
package gen.membership_protocol;

import "Address.proto";

enum MessageType {
    PING = 0;
    ACK = 1;
    PING_REQ = 2;
    JOINREQ = 3;
    JOINREP = 4;
}

enum GossipEventTypes {
    JOINED = 0;
    FAILED = 1;
}

message Gossip {
    GossipEventTypes event = 1;
    Address address = 2;
    string id = 3;
}

message PingFields {
    Address targetAddress = 1;
}

message PingReqFields {
    Address targetAddress = 1;
}

message AckFields {
    string originalId = 1;
}

message Message {
    MessageType messageType = 1;

    oneof customFields {
        PingReqFields pingReqFields = 2;
        AckFields ackFields = 3;
        PingFields pingFields = 4;
    }

    repeated Gossip gossips = 5;
}